--- a/src/app/main/main.scss
+++ b/src/app/main/main.scss
@@ -3,6 +3,7 @@
 .items-container {
   background-color: $gray200;
   padding: 40px 108px;
+  min-height: 600px;
 
   .item-card {
     display: flex;
@@ -18,16 +19,16 @@
       font-weight: 600;
       margin: 16px 16px 8px;
     }
-    h2{
-        position: absolute;
-        z-index: 2;
-        background-color: $orange;
-        color: #fff;
-        font-size: 14px;
-        padding: 4px 17px 4px 16px;
-        font-weight: 600;
-        top: 16px;
-        margin: 0px;
+    h2 {
+      position: absolute;
+      z-index: 2;
+      background-color: $orange;
+      color: #fff;
+      font-size: 14px;
+      padding: 4px 17px 4px 16px;
+      font-weight: 600;
+      top: 16px;
+      margin: 0px;
     }
     p {
       font-size: 14px;
@@ -41,19 +42,47 @@
       object-fit: cover;
       border-radius: 8px 8px 0px 0px;
     }
-    button{
-        margin: auto 16px 24px 16px;
-        background-color: $primary-blue;
-        border: 0px;
-        border-radius: 4px;
-        color: white;
-        font-size: 14px;
-        line-height: 16px;
-        padding: 11px 87px;
-    
+    button {
+      margin: auto 16px 24px 16px;
+      background-color: $primary-blue;
+      border: 0px;
+      border-radius: 4px;
+      color: white;
+      font-size: 14px;
+      line-height: 16px;
+      padding: 11px 87px;
     }
-    .btn-disabled{
-        background-color: $gray700;
+    .btn-disabled {
+      background-color: $gray700;
+    }
+  }
+
+  .empty-box {
+    background-color: white;
+    max-width: 600px;
+    height: 344px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    border-radius: 8px;
+    cursor:default;
+    img {
+      width: 36px;
+      height: 46px;
+    }
+    h1 {
+      font-size: 18px;
+      font-weight: 600;
+      line-height: 16px;
+      margin-bottom: 8px;
+    }
+    p {
+      color: $gray700;
+      font-size: 14px;
+      font-weight: 600;
+      margin: 0px;
     }
   }
 }
