--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -1,4 +1,4 @@
-@import "../../styles//variables.scss";
+@import "../../index.scss";
 
 .home-page {
   display: flex;
@@ -18,35 +18,26 @@
     }
     .login-box {
       h2 {
-        font-size: 30px;
+        font-size: $font-xl;
         line-height: 40px;
         margin: 0px;
         margin-bottom: 29px;
-        font-weight: 600;
       }
       p {
-        font-size: 14px;
+        font-size: $font-sm;
         line-height: 16px;
         margin-bottom: 8px;
       }
       .forgot-password {
         text-decoration: underline;
         color: $gray700;
-        font-size: 14px;
-        font-weight: 600;
+        font-size: $font-sm;
       }
       button {
         margin-top: 56px;
         width: 496px;
         height: 48px;
-        background-color: $primary-blue;
-        border-radius: 4px;
-        border: none;
-        color: white;
-        &:hover {
-          background-color: $secondary-blue;
-          cursor: pointer;
-        }
+      @include button
       }
     }
   }
