--- a/src/app/layout/layout.scss
+++ b/src/app/layout/layout.scss
@@ -1,4 +1,4 @@
-@import "../../styles/variables.scss";
+@import "../../index.scss";
 
 nav {
   height: 144px;
@@ -7,11 +7,9 @@ nav {
   align-items: center;
   padding: 0px 108px;
   a {
-    font-size: 24px;
+    @include header;
     line-height: 40px;
     text-decoration: none;
-    color: $gray900;
-    font-weight: 600;
   }
   img {
     width: 48px;
@@ -21,6 +19,24 @@ nav {
     margin-left: auto;
     cursor: pointer;
   }
+  .login-button {
+    padding: 11px 24px;
+    border: 1px solid $primary-blue;
+    font-size: 14px;
+    line-height: 16px;
+    border-radius: 4px;
+    color: $primary-blue;
+    margin-left: auto;
+    &:hover {
+      border: 1px solid $secondary-blue;
+      color: $secondary-blue;
+    }
+  }
+  .search-icon{
+    width: 24px;
+    height: 24px;
+    z-index: -1;
+  }
 }
 .logout-dropdown {
   width: 184px;
@@ -28,14 +44,12 @@ nav {
   display: flex;
   align-items: center;
   border-radius: 4px;
-  box-shadow: 0px 8px 32px 0px rgba(17, 18, 20, 0.16);
+  box-shadow: $box-shadow;
   cursor: pointer;
   p {
     padding: 12px 123px 12px 16px;
-    font-size: 14px;
+    font-size: $font-sm;
     line-height: 16px;
-    font-weight: 600;
     color: $gray900;
-    
   }
 }
