--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -13,5 +13,13 @@ $gray500: #b9bdcf;
 $gray700: #9194a5;
 $gray900: #1a1b1d;
 
+
+$box-shadow:  0px 8px 32px 0px rgba(17, 18, 20, 0.16);
+
+
 //FONTS
 
+$font-sm: 14px;
+$font-md: 18px;
+$font-lg: 24px;
+$font-xl: 30px;
