--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -15,8 +15,13 @@
     h1 {
       margin-top: 40px;
       margin-bottom: 280px;
+      cursor: default;
+      color: $gray900;
     }
     .login-box {
+      width: 500px;
+      color: $gray900;
+
       h2 {
         font-size: $font-xl;
         line-height: 40px;
@@ -28,17 +33,54 @@
         line-height: 16px;
         margin-bottom: 8px;
       }
+      .login-error {
+        color: #d32f2f;
+        font-size: 16px;
+      }
       .forgot-password {
         text-decoration: underline;
         color: $gray700;
         font-size: $font-sm;
+        cursor: default;
       }
       button {
         margin-top: 56px;
         width: 496px;
         height: 48px;
-      @include button
+        @include button;
       }
     }
+  }
+}
+@media (max-width: 1400px) {
+  .home-page {
+    img {
+      width: 30%;
+    }
+    .login-container {
+      padding-left: 40px;
+    }
+  }
+}
+@media (max-width: 800px) {
+  .home-page {
+    flex-direction: column;
+    align-items: center;
+    img {
+      display: none;
+    }
+    .login-container{
+      padding: 0px 24px;
+      width: calc(100% - 48px);
+    h1{
+      margin-bottom: 103px;
+    }
+    .login-box {
+      width: 100%;
+      button {
+        width: 100%;
+        max-width: 496px;
+      }
+    }}
   }
 }
