--- a/src/app/home/home.scss
+++ b/src/app/home/home.scss
@@ -12,11 +12,13 @@
     padding-left: 128px;
     display: flex;
     flex-direction: column;
-    h1 {
+    a {
       margin-top: 40px;
       margin-bottom: 280px;
-      cursor: default;
+      cursor: pointer;
       color: $gray900;
+      text-decoration: none;
+      font-size: $font-lg;
     }
     .login-box {
       width: 500px;
@@ -72,7 +74,7 @@
     .login-container{
       padding: 0px 24px;
       width: calc(100% - 48px);
-    h1{
+    a{
       margin-bottom: 103px;
     }
     .login-box {
